# timecard-backend

./: README.md  manage.py  pyproject.toml
account/: models.py  serializers.py  signals.py  urls.py
account/migrations/: 0001_initial.py
timecard/: asgi.py  settings.py  urls.py  wsgi.py
timeline/: filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
timeline/migrations/: 0001_initial.py  0002_auto_20200417_2255.py
